--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,8 @@ phases:
   install:
      commands:
         - echo Installing node 18...
-        - curl -fsSL https://deb.nodesource.com/setup_lts.x | -E bash - &&\
-        - apt install -y nodejs
+        - curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash - &&\
+        - sudo apt-get install -y nodejs
         - echo Installing Yarn...
         - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
         - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
